Re-added in padding hack to avoid menu cutoff

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+body {
+  padding-top: 40px; /* Handles cutoff from navbar */
+}
+
 p {
     text-align: justify;
 }
